--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,6 @@ export(Xbeta)
 export(abPlot)
 export(addlines)
 export(ame)
-export(ame_repL)
 export(arrayToList)
 export(checkFormat)
 export(design_array)
@@ -18,6 +17,7 @@ export(getStartVals)
 export(ggCirc)
 export(gofPlot)
 export(gofstats)
+export(lame)
 export(listToArray)
 export(mhalf)
 export(netplot)
