--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(getFitObject)
 export(getStartVals)
 export(ggCirc)
 export(gofPlot)
+export(gofPlot_long)
 export(gofstats)
 export(lame)
 export(listToArray)
