--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(netplot)
 export(precomputeX)
 export(rSab_fc)
 export(rSuv_fc)
+export(rUV_dynamic_fc)
 export(rUV_fc)
 export(rUV_rep_fc)
 export(rUV_sym_fc)
