--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,10 +2,11 @@ pandoc: 3.7.0.2
 pkgdown: 2.1.3
 pkgdown_sha: ~
 articles:
+  bipartite: bipartite.html
   dynamic_effects: dynamic_effects.html
   lame-overview: lame-overview.html
   lame: lame.html
-last_built: 2025-08-11T17:49Z
+last_built: 2025-08-12T01:27Z
 urls:
   reference: https://netify-dev.github.io/lame/reference
   article: https://netify-dev.github.io/lame/articles
