add functionality for simulate ... similar to statnet

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,11 +3,17 @@
 S3method(plot,ame)
 S3method(plot,lame)
 S3method(print,ame)
+S3method(print,ame.sim)
 S3method(print,lame)
+S3method(print,lame.sim)
 S3method(print,summary.ame)
 S3method(print,summary.lame)
+S3method(simulate,ame)
+S3method(simulate,lame)
 S3method(summary,ame)
+S3method(summary,ame.sim)
 S3method(summary,lame)
+S3method(summary,lame.sim)
 export(Xbeta)
 export(ab_plot)
 export(ame)
@@ -72,6 +78,19 @@ import(ggrepel)
 import(patchwork)
 import(reshape2)
 importFrom(Rcpp,evalCpp)
+importFrom(cli,cli_alert_info)
+importFrom(cli,cli_alert_success)
+importFrom(cli,cli_end)
+importFrom(cli,cli_h1)
+importFrom(cli,cli_h2)
+importFrom(cli,cli_li)
+importFrom(cli,cli_text)
+importFrom(cli,cli_ul)
+importFrom(cli,col_blue)
+importFrom(cli,col_green)
+importFrom(cli,col_red)
+importFrom(cli,format_inline)
+importFrom(cli,style_bold)
 importFrom(grDevices,devAskNewPage)
 importFrom(graphics,abline)
 importFrom(graphics,arrows)
@@ -100,6 +119,7 @@ importFrom(stats,rnorm)
 importFrom(stats,rpois)
 importFrom(stats,runif)
 importFrom(stats,sd)
+importFrom(stats,simulate)
 importFrom(stats,symnum)
 importFrom(stats,time)
 importFrom(stats,var)
