add check_format function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(ame_memory_usage)
 export(ame_options)
 export(ame_parallel)
 export(array_to_list)
+export(check_format)
 export(combine_ame_chains)
 export(compact_ame)
 export(compute_mcmc_diagnostics)
